[package]
name = "primobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.2", default-features = false, features=["builder", "cache", "client", "http", "model", "rustls_backend", "gateway", "collector"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
chrono = "0.4.31"
